# cpp_weekly

./: .gitignore  CMakeLists.txt  README.md  SPONSORS.md  videos.html  videos.json  videos.md  videos.yml
.github/ISSUE_TEMPLATE/: episode-request.md
HighPerfBitPattern/: BitPattern.hpp  main.cpp
PMR/: 1_experiments.cpp  2_aa_type.cpp  CMakeLists.txt  json_tests.cpp  performance_tests.cpp
homework/: readme.md  smallpt_constexpr.cpp  smallpt_dummy_const_everything.cpp  smallpt_modernized.cpp
homework/NFA2DFA_auto_all_the_things/: FA.cpp  FA.h  Makefile  convertor.cpp
homework/smallpt_constexpr_parallel/: CMakeLists.txt  image2.ppm  mainPt.cpp  readme.md  smallpt_parallel.cpp  smallpt_parallel.h
mandelbrot/: make_mandlebrot.sh  mandelbrot.cpp
multiple_destructors/: after.cpp  before.cpp
parallel_algorithms/: game-of-life-compact-indexes.cpp  game-of-life-size_t-indexes.cpp  game_of_life-no-iostreams.cpp  game_of_life.cpp  game_of_life_always_inline.cpp  performance_stats.csv  run_performance_tests.sh
python/: cppyy-test.hpp  cppyy-test.py
python/conway_game_of_life/: cellular_automata.py  life-codon.py  life-cppyy.cpp  life-cppyy.hpp  life-cppyy.py  life.cpp  life.kt  life.kts  life.py
python/conway_game_of_life/larger_tests/: average_times.sh  build.sh  life-constexpr-initial-state.cpp  life-stack-based.cpp  life-string-of-bool.cpp  life-vec-of-char-constant-sized-constant-rules.cpp  life-vec-of-char-constant-sized.cpp  life-vec-of-char.cpp  life.cpp  parameters.hpp
